--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "paolo",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.7.5",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.3.2",
