--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "^1.7.5",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "mongoose": "^5.3.2",
     "path": "^0.12.7"
