--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
+    "livereload": "^0.7.0",
     "mongoose": "^5.3.2",
     "path": "^0.12.7"
   }
