--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "author": "paolo",
   "license": "ISC",
   "dependencies": {
+    "@ui-platform/angularjs-bootstrap4-datetimepicker": "^1.0.1",
     "angular": "^1.7.5",
+    "angular-date-time-input": "^1.2.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "livereload": "^0.7.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.2",
     "path": "^0.12.7"
   }
